--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Métadonnées du projet.
-sonar.projectKey=sid:domotique
-sonar.projectName=sid-domotique
+sonar.projectKey=sqli:Project
+sonar.projectName=sqli-Project
 sonar.projectVersion=4.0
 
 # Chemin vers les sources (obligatoire).
